tests/ui/diagnostic_namespace/on_unknown_item/incorrect-locations.stderr
error[E0463]: can't find crate for `foo`
  --> $DIR/incorrect-locations.rs:5:1
   |
LL | extern crate foo;
   | ^^^^^^^^^^^^^^^^^ can't find crate

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:3:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | extern crate foo;
   | ---------------- not an import
   |
   = note: `#[warn(misplaced_diagnostic_attributes)]` (part of `#[warn(unknown_or_malformed_diagnostic_attributes)]`) on by default

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:8:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | const CONST: () = ();
   | --------------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:12:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | static STATIC: () = ();
   | ----------------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:16:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | type Type = ();
   | --------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:20:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | enum Enum {}
   | --------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:24:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | impl Enum {}
   | --------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:28:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | extern "C" {}
   | ------------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:32:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | fn fun() {}
   | -------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:36:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | struct Struct {}
   | ------------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:40:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | trait Trait {}
   | ----------- not an import

warning: `#[diagnostic::on_unknown_item]` can only be applied to `use` statements
  --> $DIR/incorrect-locations.rs:44:1
   |
LL | #[diagnostic::on_unknown_item(message = "foo")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
LL |
LL | impl Trait for i32 {}
   | ------------------ not an import

error: aborting due to 1 previous error; 11 warnings emitted

For more information about this error, try `rustc --explain E0463`.
